samples/_failures_safe/1761197390_9202e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c5bd0ad2.c: In function ‘main’:
./samples/SAFE/__tmp_c5bd0ad2.c:147:5: error: expected declaration or statement at end of input
  147 |     }
      |     ^
